--- a/src/pages/Catalog/catalog.module.scss
+++ b/src/pages/Catalog/catalog.module.scss
@@ -1,3 +1,121 @@
 .catalog{
+  padding: 89px 0;
+  &__title{
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 45px;
+    color: #1D1D1D;
+    margin-bottom: 47px;
+  }
+  &__column{
+    display: flex;
+    column-gap: 24px;
+    &__aside{
+      display: flex;
+      flex-direction: column;
+      width: 25%;
+      row-gap: 20px;
+      &__list{
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+        background: #000000;
+        min-height: 200px;
+        &__line {
+          display: flex;
+          flex-direction: row;
+          justify-content: space-between;
+          padding: 18px;
+          font-weight: 700;
+          font-size: 14px;
+          line-height: 18px;
+          align-items: center;
+          color: #FFFFFF;
+          cursor: pointer;
+        }
+        &__line:hover{
+          background: #C53720;
+        }
+      }
+    }
+    &__contForRow{
+      display: flex;
+      flex-direction: column;
+      row-gap: 36px;
+      width: 75%;
+    }
+    &__row{
+      display: grid;
+      grid-template-columns: repeat(3,1fr);
+      gap: 24px;
+      width: 100%;
+      &__card{
+        display: flex;
+        flex-direction: column;
+        min-height: 356px;
+        &__imgCont{
+          width: 100%;
+          height: 184px;
+          background: white;
+        }
+        &__subCont{
+          display: flex;
+          flex-direction: column;
+          padding: 20px 12px;
+          background: #1D1D1D;
+          min-height: 172px;
+          justify-content: space-between;
+          &__title{
+            font-weight: 700;
+            font-size: 16px;
+            line-height: 20px;
+            color: #FFFFFF;
+          }
+          &__subtitle{
+            font-weight: 500;
+            font-size: 12px;
+            line-height: 15px;
+            color: #FFFFFF;
+            //margin: 12px 0 30px;
+          }
+          &__btn{
+            font-weight: 700;
+            font-size: 12px;
+            color: #FFFFFF;
+            padding: 12px 20px;
+            border: 4px solid #C53720;
+            background: none;
+            max-width: 120px;
+            cursor: pointer;
+          }
+        }
+      }
+    }
+    &__data{
+      display: flex;
+      flex-direction: column;
 
+      &__text{
+        font-weight: 500;
+        font-size: 16px;
+        line-height: 20px;
+        color: #1D1D1D;
+      }
+      &__rules{
+        display: flex;
+        flex-direction: column;
+        row-gap: 10px;
+        margin: 12px 0;
+        &__rule{
+          display: flex;
+          align-items: center;
+          column-gap: 10px;
+          font-weight: 500;
+          font-size: 16px;
+          line-height: 20px;
+          color: #1D1D1D;
+        }
+      }
+    }
+  }
 }
