--- a/src/pages/Card/card.module.scss
+++ b/src/pages/Card/card.module.scss
@@ -38,10 +38,11 @@
       display: flex;
       flex-direction: column;
       row-gap: 5px;
+      font-size: 16px;
       &__line{
         font-weight: 700;
-        font-size: 16px;
-        line-height: 20px;
+        font-size: 1em;
+        line-height: 1.2em;
         color: #1D1D1D;
       }
       &__span{
